fix: fix z-index and min-height in header

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,6 +1,8 @@
 .header {
   background: url("../img/intro-bg.png") 0 0 no-repeat;
   background-size: 100%;
+  z-index: 100;
+  min-height: 100vh;
 
   @include vp-1439 {
     background-size: cover;
